--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,12 @@ h1{
 }
 
 .h3, h3{
-	font-size: .7em;
-	line-height: 18px;
+	font-size: .7rem;
+	line-height: 1.1rem;
+}
+
+.header .h3{
+	max-width:360px;
 }
 
 .brands h2{
@@ -38,6 +42,14 @@ h1{
 }
 .brands {
 	font-size: .7rem;
+}
+
+.feed .item{
+	font-size:.8rem;
+}
+
+.feed .max-width-1{
+	max-width:460px;
 }
 
 .spaced{
@@ -80,12 +92,13 @@ footer nav a{
 
 footer .social a{
 	display: block;
-	margin-bottom:.2rem;
+	margin-bottom:1rem;
 }
 
 .subscribe{
 	width:100%;
 	max-width:250px;
+	margin:0 0 0 auto;
 }
 .subscribe input{
 	font-family: Helvetica, Arial, Sans-serif;
@@ -121,6 +134,10 @@ footer .social a{
 	line-height: 1.5;
 }
 
+.post p.small{
+	margin-top:5px;
+}
+
 .post .full.narrow{
 	max-width: 44rem;
 	margin:0 auto 0 auto;
@@ -139,7 +156,8 @@ p.small{
 	margin-left:0;
 	margin-right:0;
 	margin-top:1rem;
-	font-size:.9rem;
+	margin-bottom:3.4rem;
+	font-size:.6rem;
 }
 .post .module a{
 	text-decoration: underline;
